# midnight-node

./: .envrc  .gitignore  .grype.yaml  AGENTS.md  COMPACTC_VERSION  Cargo.toml  Earthfile  README.md  deny.toml  justfile  rust-toolchain.toml
pallets/cnight-observation/mock/: Cargo.toml
pallets/cnight-observation/mock/src/: mock.rs  mock_with_capture.rs
pallets/federated-authority/: Cargo.toml
pallets/federated-authority-observation/: Cargo.toml
pallets/federated-authority-observation/src/: lib.rs  tests.rs
pallets/federated-authority/src/: benchmarking.rs  lib.rs  tests.rs  types.rs
pallets/midnight/: Cargo.toml
pallets/midnight-system/: Cargo.toml
pallets/midnight-system/src/: lib.rs
pallets/midnight/rpc/: Cargo.toml
pallets/midnight/rpc/src/: lib.rs
pallets/midnight/src/: benchmarking.rs  lib.rs  runtime_api.rs  tests.rs
pallets/system-parameters/: Cargo.toml  README.md
pallets/system-parameters/rpc/: Cargo.toml
pallets/system-parameters/rpc/src/: lib.rs
pallets/system-parameters/src/: benchmarking.rs  lib.rs  runtime_api.rs  tests.rs
pallets/version/: Cargo.toml
primitives/beefy/: Cargo.toml
primitives/beefy/src/: lib.rs
primitives/federated-authority-observation/: Cargo.toml
primitives/federated-authority-observation/src/: lib.rs
primitives/ics-observation/: Cargo.toml
primitives/ics-observation/src/: lib.rs
primitives/ledger/: Cargo.toml
primitives/ledger/src/: lib.rs
primitives/mainchain-follower/: Cargo.toml
primitives/mainchain-follower/src/: lib.rs
primitives/mainchain-follower/src/data_source/: cnight_observation.rs  cnight_observation_mock.rs  federated_authority_observation.rs  federated_authority_observation_mock.rs  metrics.rs  mod.rs
primitives/mainchain-follower/src/db/: mod.rs  multi_asset_cache.rs  types.rs
primitives/mainchain-follower/src/idp/: cnight_observation.rs  federated_authority_observation.rs
primitives/midnight/: Cargo.toml
primitives/midnight/src/: lib.rs
primitives/system-parameters/: Cargo.toml
res/: Cargo.toml
res/cfg/: ddosnet.toml  default.toml  dev.toml  devnet.toml  govnet.toml  guardnet.toml  mainnet.toml  node-dev-01.toml  preprod.toml  preview.toml  qanet.toml
res/ddosnet/: ics-config.json  permissioned-candidates-config.json  registered-candidates-addresses.json  reserve-config.json
res/dev/: cnight-addresses.json  cnight-config.json  cnight-genesis.json  federated-authority-config.json  ics-config.json  pc-chain-config.json  permissioned-candidates-addresses.json  permissioned-candidates-config.json  registered-candidates-addresses.json
res/devnet/: authorization-addresses.json  chain-spec-abridged.json  chain-spec-raw.json  chain-spec.json  cnight-config.json  federated-authority-addresses.json  federated-authority-config.json  ics-addresses.json  ics-config.json  pc-chain-config.json  pc-resources-config.json  permissioned-candidates-addresses.json  permissioned-candidates-config.json  registered-candidates-addresses.json  reserve-addresses.json  reserve-config.json
res/genesis/: genesis_block_devnet.mn  genesis_block_govnet.mn  genesis_block_qanet.mn  genesis_state_devnet.mn  genesis_state_govnet.mn  genesis_state_qanet.mn  genesis_state_undeployed.mn
res/governancetesting/: chain-spec.json  federated-authority-config.json  pc-chain-config.json  system-parameters-config.json
res/govnet/: authorization-addresses.json  cardano-tip.json  chain-spec-abridged.json  chain-spec-raw.json  chain-spec.json  cnight-addresses.json  cnight-config.json  federated-authority-addresses.json  federated-authority-config.json  ics-addresses.json  ics-config.json  pc-chain-config.json  permissioned-candidates-addresses.json  permissioned-candidates-config.json  registered-candidates-addresses.json  reserve-addresses.json  reserve-config.json  system-parameters-config.json
res/local-environment/: reserve-config.json
res/node-dev-01/: chain-spec-abridged.json  chain-spec-raw.json  chain-spec.json  federated-authority-addresses.json  federated-authority-config.json  governance.addr  governance.vkey  pc-chain-config.json  permissioned-candidates-addresses.json  permissioned-candidates-config.json  registered-candidates-addresses.json
res/perfnet/: pc-chain-config-updated.json  pc-chain-config.json
res/preprod/: chain-spec-abridged.json  chain-spec-raw.json  chain-spec.json  federated-authority-config.json  pc-chain-config.json
res/preview/: chain-spec-abridged.json  chain-spec-raw.json  chain-spec.json  federated-authority-config.json  ics-config.json  pc-chain-config.json
res/qanet/: authorization-addresses.json  cardano-tip.json  chain-spec-abridged.json  chain-spec-raw.json  chain-spec.json  federated-authority-addresses.json  federated-authority-config.json  ics-addresses.json  ics-config.json  pc-chain-config.json  permissioned-candidates-addresses.json  permissioned-candidates-config.json  registered-candidates-addresses.json  reserve-addresses.json  system-parameters-config.json
res/src/: lib.rs
res/src/networks/: definitions.rs  mod.rs
res/test-contract/: contract_tx_1_deploy_undeployed.mn  contract_tx_2_store_undeployed.mn  contract_tx_3_check_undeployed.mn  contract_tx_4_change_authority_undeployed.mn
res/test-tx-deserialize/: serialized_tx_no_context.mn  serialized_tx_with_context.mn
res/test-zswap/: zswap_undeployed.mn
runtime/common/: Cargo.toml
runtime/common/src/: governance.rs  lib.rs
tests/e2e/: Cargo.toml  README.md
tests/e2e/src/: config.rs  faucet.rs  lib.rs
tests/e2e/src/api/: cardano.rs  midnight.rs
tests/e2e/tests/: lib.rs
util/toolkit/: .gitignore  Cargo.toml  README.md  test-images.docker-compose.yml
util/toolkit/src/: cli.rs  cli_parsers.rs  client.rs  fetcher.rs  genesis_generator.rs  lib.rs  log_writer.rs  main.rs  remote_prover.rs  sender.rs  utils.rs
util/toolkit/src/commands/: contract_address.rs  contract_state.rs  dust_balance.rs  fetch.rs  mod.rs  (+18 more)
util/toolkit/tests/: cached_context.rs  hardfork_e2e.rs  postgres_backend.rs  single_tx.rs  toolkit_e2e.rs
util/upgrader/: Cargo.toml
util/upgrader/src/: lib.rs
(+502 files in other folders)
