[package]
name = "midnight-node-res"
version = "0.1.0"
edition = "2024"
build = "build.rs"
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
chain-spec = [
    "midnight-primitives-federated-authority-observation/std",
    "midnight-primitives-system-parameters/std",
    "pallet-cnight-observation/std",
    "std",
    "sp-core/std",
    "sc-service",
    "sp-session-validator-management",
    "sidechain-domain"
]
test = ["chain-spec"]
std = []
runtime-benchmarks = []

[dependencies]
hex-literal.workspace = true
midnight-serialize.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["alloc"] }
sp-core = { workspace = true, optional = true }
sc-service = { workspace = true, optional = true }
sp-session-validator-management = { workspace = true, optional = true }
sidechain-domain = { workspace = true, optional = true }
midnight-primitives-federated-authority-observation = { workspace = true, optional = true }
midnight-primitives-system-parameters = { workspace = true, optional = true }
pallet-cnight-observation = { workspace = true, optional = true }

[dev-dependencies]
midnight-serialize.workspace = true
hex.workspace = true
toml.workspace = true

[build-dependencies]
walkdir = "2"

[lints]
workspace = true
