[package]
name = "pallet-federated-authority"
version = "0.1.0"
authors = ["Midnight <https://github.com/midnightntwrk>"]
homepage = "https://midnight.network/"
edition = "2024"
license = "Apache-2.0"
publish = false
repository = "https://github.com/midnightntwrk/midnight-node/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true, features = ["derive", "max-encoded-len"] }
log = { workspace = true }
scale-info = { workspace = true, features = ["derive"] }
frame-support.workspace = true
frame-system.workspace = true
sp-runtime.workspace = true
frame-benchmarking = { workspace = true, optional = true}
pallet-collective = { workspace = true, optional = true}
impl-trait-for-tuples.workspace = true

[dev-dependencies]
sp-core.workspace = true
sp-io.workspace = true
pallet-collective.workspace = true
pallet-membership.workspace = true
impl-trait-for-tuples.workspace = true

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"frame-support/std",
	"frame-system/std",
    "pallet-membership/std",
    "pallet-collective/std",
	"scale-info/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "pallet-collective",
    ]

[package.metadata.cargo-shear]
ignored = ["log", "parity-scale-codec", "scale-info"]
