[package]
name = "midnight-primitives-federated-authority-observation"
version = "0.1.0"
edition = "2024"
description = "Primitives for federated authority observation"
license-file.workspace = true

[dependencies]
hex = { workspace = true, features = ["serde"] }
parity-scale-codec.workspace = true
scale-info.workspace = true
sp-inherents.workspace = true
sp-runtime.workspace = true
sp-api.workspace = true
sp-core.workspace = true
sidechain-domain.workspace = true
serde = { workspace = true, optional = true }
serde_valid = { workspace = true, optional = true }

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "scale-info/std",
    "sp-inherents/std",
    "sp-runtime/std",
    "sidechain-domain/std",
    "sp-core/std",
    "sp-api/std",
    "serde",
    "serde/std",
    "serde_valid",
]
