[package]
name = "midnight-primitives"
version = "0.1.0"
edition = "2024"
description = "Midnight primitives"
license-file.workspace = true

[dependencies]
hex-literal = { workspace = true, default-features = false }
scale-info = { workspace = true, features = ["derive"] }
sp-runtime.workspace = true
sp-core.workspace = true
parity-scale-codec.workspace = true
midnight-node-ledger.workspace = true

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "scale-info/std",
    "sp-runtime/std",
    "sp-core/std",
    "midnight-node-ledger/std",
]
