[package]
name = "midnight-primitives-system-parameters"
version = "0.1.0"
edition = "2024"
description = "Primitives for system parameters"
license-file.workspace = true

[dependencies]
hex.workspace = true
sidechain-domain.workspace = true
serde = { workspace = true, features = ["derive"], optional = true }

[features]
default = ["std"]
std = [
    "sidechain-domain/std",
    "serde",
]
