[package]
name = "midnight-node-e2e"
version = "0.1.0"
edition = "2021"
publish = false
autotests = false

[features]
local = []
local-ci = []
qanet = []
default = ["local-ci"]

[dependencies]
hex.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
whisky = { git = "https://github.com/rsporny/whisky", branch = "wasm-bindgen-update" }
tiny-bip39 = "2.0.0"
ogmios-client = { git = "https://github.com/input-output-hk/partner-chains", tag = "v1.8.1" }
serde_json.workspace = true
rand = "0.9.2"
subxt.workspace = true
midnight-node-metadata.workspace = true
midnight-node-ledger-helpers = { workspace = true, features = ["can-panic"] }
blake2 = "0.10.6"

[[test]]
name = "e2e_tests"
path = "tests/lib.rs"
test = false
harness = true
