[package]
name = "pallet-cnight-observation-mock"
version = "1.4.0"
edition = "2024"
description = "Mock runtimes for cNight Observation pallet"
license-file.workspace = true

[dependencies]
pallet-cnight-observation = { workspace = true }
midnight-node-res = { features = ["test", "chain-spec"], workspace = true}
sp-io = {workspace = true }
pallet-midnight = { workspace = true }
pallet-midnight-system = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
midnight-node-ledger = { default-features = true, workspace = true }
parity-scale-codec.workspace = true
scale-info.workspace = true
sidechain-domain.workspace = true
pallet-timestamp.workspace = true
midnight-primitives.workspace = true

[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "scale-info/std",
    "parity-scale-codec/std",
    "midnight-primitives/std",
    "pallet-cnight-observation/std",
    "sidechain-domain/std",
    "pallet-midnight/std",
    "pallet-midnight-system/std",
    "pallet-timestamp/std",
    "midnight-node-res/std"
]

[package.metadata.cargo-shear]
ignored = ["parity-scale-codec", "scale-info"]
