[package]
name = "pallet-midnight-rpc"
version = "0.1.0"
edition = "2024"
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpsee  = { workspace = true, features = [ "client", "server", "macros" ] }
schemars.workspace = true
serde.workspace = true
hex.workspace = true
sc-client-api.workspace = true
sp-api.workspace = true
sp-runtime.workspace = true
sp-blockchain.workspace = true
pallet-midnight.workspace = true

[features]
default = ["std"]
std = [
    "sp-api/std",
    "sp-runtime/std",
    "pallet-midnight/std"
]

[lints]
workspace = true
