[package]
name = "pallet-system-parameters-rpc"
version = "0.1.0"
authors.workspace = true
homepage.workspace = true
edition.workspace = true
license-file.workspace = true
publish = false
repository.workspace = true
description = "RPC endpoints for system-parameters pallet"

[dependencies]
jsonrpsee = { workspace = true, features = ["client", "server", "macros"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
async-trait.workspace = true
sc-client-api.workspace = true
sp-api.workspace = true
sp-runtime.workspace = true
sp-blockchain.workspace = true
sp-core.workspace = true
pallet-system-parameters.workspace = true
sidechain-domain.workspace = true
sp-session-validator-management-query.workspace = true

[features]
default = ["std"]
std = [
    "sp-api/std",
    "sp-runtime/std",
    "sp-core/std",
    "pallet-system-parameters/std",
    "sidechain-domain/std",
]

[lints]
workspace = true
